[gd_scene load_steps=2 format=3 uid="uid://iyssehxtq6ja"]

[ext_resource type="Script" path="res://Scenes/SettingsMenu/SettingsMenu.gd" id="1_wx6sm"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wx6sm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
self_modulate = Color(0.188235, 0.188235, 0.188235, 1)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -219.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "FullScreen"
vertical_alignment = 1

[node name="FullscreenCheck" type="CheckButton" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Borderless" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Borderless"
vertical_alignment = 1

[node name="BorderlessCheck" type="CheckButton" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="VSync" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync"
vertical_alignment = 1

[node name="VSyncCheck" type="CheckButton" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Volume" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Master Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundFxVolume" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SoundFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Brightness" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Brightness"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeSlide" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
min_value = -30.0
max_value = 30.0
value = -20.0

[node name="SoundFxVolumeSlide" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
min_value = -30.0
max_value = 30.0
value = -20.0

[node name="BrightnessSlide" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
min_value = 0.01
max_value = 4.0
step = 0.01
value = 1.0

[node name="Spacer3" type="Control" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer2/BorderlessCheck" to="." method="_on_borderless_check_toggled"]
[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer3/VSyncCheck" to="." method="_on_v_sync_check_toggled"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/VolumeSlide" to="." method="_on_volume_slide_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/SoundFxVolumeSlide" to="." method="_on_sound_fx_volume_slide_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BrightnessSlide" to="." method="_on_brightness_slide_value_changed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
